--- a/style.css
+++ b/style.css
@@ -23,17 +23,18 @@ h1 {
 nav {
     text-align: center;
     padding-bottom: 10px;
-    background-color: rgb(114, 238, 189);
+    /* background-color: rgb(114, 238, 189); */
+    background-color: azure;
     height: 40px;
 }
 
 nav > a {
-    color:#094CB0;
+    color:#053a8a;
     text-decoration: none;
     margin-top: 10%;
     margin: 0px 20px 5px;
     padding: 0px;
-    background-color: rgb(114, 238, 189);
+    background-color: azure;
     border-radius: 5px;
 }
 
@@ -47,19 +48,24 @@ nav > a:hover {
 .fotos {
     width: 33%;
     height: 570px;
-    margin: 0%;
-    padding: 0%;
-    border: 0%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    text-align: justify;
 }
 
 figure{
-    text-align: center;
+    width: 100%;
     color: cornsilk;
     font-weight: bold;
-    margin: 0%;
-    padding: 0%;
-    border: 0%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
     background-color: rgb(34, 33, 33);
+}
+
+figcaption{
+    text-align: center;
 }
 
 section{
@@ -142,10 +148,18 @@ h5{
     text-align: right;
 }
 
-.mapa-fmvz{
+footer > iframe{
     display: inline-block;
     text-align: right;
     width: 10%;
     height: 10%;
+}
+
+.contacto{
+    display: inline-block;
+
+}
+.copy{
+    text-align: center;
 }
 
