--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 main{
     margin: 0px;
     background-color: rgb(34, 33, 33);
-    padding: 0px 5%;
+    /* padding: 0px 5%; */
 }
 
 h1 {
@@ -52,6 +52,7 @@ nav > a:hover {
     padding: 0px;
     border: 0px;
     text-align: justify;
+    background-color: rgb(0, 0, 0)
 }
 
 figure{
@@ -61,11 +62,12 @@ figure{
     margin: 0px;
     padding: 0px;
     border: 0px;
-    background-color: rgb(34, 33, 33);
+    background-color: rgb(0, 0, 0);
 }
 
 figcaption{
     text-align: center;
+    background-color: rgb(0, 0, 0)
 }
 
 section{
@@ -75,16 +77,20 @@ section{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     line-height: 1.5;
     font-weight:lighter; 
+    padding: 0px 5%;
 }
 
+.libertades{
+    background-color: #545353;
+    border: 0px;
+}
 
 .libertad{
-    display: inline-block;
-    margin-left: 45px;
-    margin-right: 30px;
-    margin-bottom: 50px;
-    bottom: 0%;
 
+    display: inline-block;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 50px;
 }
 
 .lista{
@@ -99,6 +105,17 @@ aside{
     margin-left: 0px;
 }
 
+.bienestar{
+    background-color: rgb(39, 44, 28);
+
+}
+
+.pregunta1{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+}
+
 h3{
     text-align: center;
     color: rgb(0, 0, 0);
@@ -106,38 +123,59 @@ h3{
     
 }
 
-.pregunta{
-    font-weight: bold;
-    text-decoration:underline;
-    color: rgb(191, 245, 245);
+.pregunta2{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 25px;
 }
+
 
 
 table{
     width: 100%;
     margin: 20px auto;
-    background-color: #094cb05e;
+    background-color:azure;
     text-align: center;
+    color: black;
 
 }
  tr, td{
-    border: 1px solid rgb(156, 252, 13);
+    border: 1px solid rgb(252, 215, 6);
     padding: 5px;
     margin: 20px;
 }
 
 th{
     
-    border: 1px solid rgb(107, 153, 37);
+    border: 1px solid rgb(255, 179, 0);
 }
 
-caption{
-    color: antiquewhite;
-    border: 1px solid rgb(156, 252, 13);
+
+
+.pagina1 {
+    width: 500px;
+    height: 500px;
+    text-align: right;
 }
 
-.columnas{
-    background-color: aquamarine;
+.pagina2 {
+    width: 500px;
+    height: 500px;
+    text-align: right;
+}
+
+.cognicion{
+    width: 100%;
+}
+
+.enfermedades{
+    background-color: rgb(45, 0, 0);
+}
+
+.titulo-enfermedades{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 25px;
 }
 
 footer {
