--- a/style.css
+++ b/style.css
@@ -202,3 +202,21 @@ footer > iframe{
     text-align: center;
 }
 
+.formulario{
+    
+}
+
+fieldset > p {
+    margin-left: 10px;
+}
+
+legend{
+    margin-left: 10px;
+}
+
+.boton-enviar{
+    text-align: center;
+}
+
+.
+
