--- a/style.css
+++ b/style.css
@@ -7,17 +7,20 @@
 
 main{
     margin: 0px;
-    background-color: rgb(34, 33, 33);
+    background-color: azure;
     /* padding: 0px 5%; */
 }
 
-h1 {
+header{
     background-color: azure;
+    margin: 0px;
+}
+
+h1 {
     color:rgb(0, 0, 0);
     text-align: center;
     font-family:fantasy;
-    margin: 0px;
-
+    padding-top: 30px;
 }
 
 nav {
@@ -45,14 +48,14 @@ nav > a:hover {
     padding: 10px;
 }
 
-.fotos {
+.fotos-perros {
     width: 33%;
     height: 570px;
     margin: 0px;
     padding: 0px;
     border: 0px;
     text-align: justify;
-    background-color: rgb(0, 0, 0)
+    background-color: azure;
 }
 
 figure{
@@ -62,94 +65,166 @@ figure{
     margin: 0px;
     padding: 0px;
     border: 0px;
-    background-color: rgb(0, 0, 0);
+    background-color: azure;
 }
 
 figcaption{
     text-align: center;
-    background-color: rgb(0, 0, 0)
+    background-color: azure;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    padding: 10px;
+    font-style: oblique;
 }
 
-section{
-    color: azure;
-    font-size: 20px;
+p{
     text-align: justify;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     line-height: 1.5;
-    font-weight:lighter; 
+    font-weight:lighter;
     padding: 0px 5%;
+    font-size: 20px; 
 }
+
+.OMSA{
+    color: #053a8a;
+    padding-bottom: 20px;
+}
+
 
 .libertades{
-    background-color: #545353;
-    border: 0px;
+    background-color: #031f48;
+    padding: 0px 5%;
+    display: grid;
+    grid-template-columns: 50% 30%;
+    
+    
 }
 
 .libertad{
 
-    display: inline-block;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 50px;
+    text-align: right;
+    padding: 10px;
+}
+
+.titulo-lista{
+    font-size: 25px;
+    padding: 10px;
+    text-align: justify;
+    color: azure;
+    margin-left: 20px;
+    margin-top: 30px;
+    
 }
 
 .lista{
-    color: rgb(210, 237, 158);
+    color: azure;
     list-style-image: url(img/huella.png);
+    text-align: justify;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    padding: 0px 5%;
+    font-size: 20px; 
+    margin-left: 20px;
 }
 
-aside{
-    display: inline-block;
-    text-align: right;
-    margin-top: 10px;
-    margin-left: 0px;
+.video{
+    display: grid;
+    padding: 10px;
+
+    
+    
 }
 
 .bienestar{
-    background-color: rgb(39, 44, 28);
-
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 15px;
 }
 
-.pregunta1{
+
+.titulo-bienestar{
     text-align: center;
-    color: rgb(255, 255, 255);
-    font-size: 25px;
+    color: rgb(135, 205, 23);
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
-h3{
-    text-align: center;
-    color: rgb(0, 0, 0);
-    background-color: rgb(156, 252, 13);
+
+.p-bienestar{
+    text-align: justify;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    padding: 10px 5%;
+    font-size: 20px;
+    color: #053a8a; 
+}
+
+.cognicion{
+    background-color: #031f48;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     
 }
 
-.pregunta2{
+.titulo-cognicion{
     text-align: center;
-    color: rgb(255, 255, 255);
-    font-size: 25px;
+    color: rgb(205, 147, 23);
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+
+}
+
+.p-cognicion{
+    text-align: justify;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    padding: 10px 5%;
+    font-size: 20px;
+    color: azure;
 }
 
 
+.titulo-dia-perro{
+    text-align: center;
+    color: rgb(135, 205, 23);
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
 
-table{
-    width: 100%;
+.p-dia-perro{
+    text-align: justify;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    padding: 10px 5%;
+    font-size: 20px;
+    color: #053a8a; 
+}
+
+.tabla-dia-perro{
+    width: 70%;
     margin: 20px auto;
-    background-color:azure;
+    background-color:rgba(135, 205, 23, 0.087);
     text-align: center;
-    color: black;
-
-}
- tr, td{
-    border: 1px solid rgb(252, 215, 6);
-    padding: 5px;
-    margin: 20px;
+    color: #023075;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    font-size: 18px;   
 }
 
-th{
-    
-    border: 1px solid rgb(255, 179, 0);
+th,td {    
+    border: 3px ;
+    padding: 2px;
 }
-
 
 
 .pagina1 {
@@ -202,8 +277,13 @@ footer > iframe{
     text-align: center;
 }
 
-.formulario{
-    
+form{
+    margin: 10px 0%;
+    padding: 10px;
+}
+
+label{
+    margin-left: 10px;
 }
 
 fieldset > p {
