--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ nav > a:hover {
 }
 
 figure{
-    width: 100%;
+    max-width: 100%;
     color: cornsilk;
     font-weight: bold;
     margin: 0px;
@@ -226,77 +226,172 @@ th,td {
     padding: 2px;
 }
 
+.juguetes{
+    background-color: #031f48;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
 
-.pagina1 {
+.titulo-juguetes{
+    text-align: center;
+    color: rgb(205, 147, 23);
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    
+}
+
+.p-juguetes{
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    padding: 10px 5%;
+    font-size: 20px;
+    color: azure;
+}
+
+.img-jueguetes{
+    display:inline-block;
+    
+}
+
+.clase-juguetes{
+    background-color: #172a46;
+    margin-left: 40px;
+   
+}
+
+.fotos-juguetes{    
+   height: 350px;    
+}
+
     width: 500px;
     height: 500px;
     text-align: right;
-}
+} */
 
-.pagina2 {
-    width: 500px;
-    height: 500px;
-    text-align: right;
-}
-
-.cognicion{
-    width: 100%;
-}
-
-.enfermedades{
-    background-color: rgb(45, 0, 0);
+.pag-jueguetes{
+    display:inline-block;
+    height: 300px;
+    
+    background-color: #F39C12;
 }
 
 .titulo-enfermedades{
     text-align: center;
-    color: rgb(255, 255, 255);
-    font-size: 25px;
+    color: rgb(135, 205, 23);
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
-footer {
-    padding: 20px 15%;
-    background-color:azure;
+.p-enfermedades{
+    text-align: justify;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    padding: 10px 5%;
+    font-size: 20px;
+    color: #053a8a;
+    margin-bottom: 10px; 
 }
 
-h5{
-    text-align: right;
+.img-enfermedades{
+    max-width: 100%;
+    padding-bottom: 10px;
 }
 
-footer > iframe{
-    display: inline-block;
-    text-align: right;
-    width: 10%;
-    height: 10%;
-}
-
-.contacto{
-    display: inline-block;
-
-}
-.copy{
-    text-align: center;
-}
-
-form{
-    margin: 10px 0%;
+.formulario{
+    background-color: #031f48;
     padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
-label{
-    margin-left: 10px;
+
+.titulo-formulario{
+    text-align: justify;
+    color: rgb(205, 147, 23);
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding: 10px 5%;
 }
 
-fieldset > p {
-    margin-left: 10px;
+.p-formulario{
+    color: #F39C12;
 }
 
-legend{
-    margin-left: 10px;
+.form-formulario{
+    justify-content: space-evenly;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    line-height: 1.5;
+    font-weight:lighter;
+    padding: 10px 5%;
+    font-size: 16px;
+    color: azure;
+}
+
+.bloques-formulario{
+    padding: 10px;
+    width: 100%;
+    
+}
+
+.titulo-bloque{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+label > input {
+    padding: 6px;
+    text-align: justify;
+    margin-bottom: 10px;
+       
+}
+
+textarea{
+    text-align: justify;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-weight:lighter;
+    padding: 6px;
+    font-size: 15px;
+    color: azure;
 }
 
 .boton-enviar{
-    text-align: center;
+    font-size: 20px;
+    background-color: #F39C12;
+    margin-top: 10px;
 }
 
-.
+footer{
+    background-color: silver;
+}
 
+.contacto{
+    padding: 10px 5%;
+}
+
+audio{
+    padding: 10px 5%;
+    
+}
+
+.mapa{
+    text-align: end;
+    margin-right: 40px;
+    vertical-align: top;
+}
+
+.titulo-mapa{
+    color: #031f48;
+    padding: 5px;
+}
+
+  
+  .copy {
+    text-align: center;
+  }
