Union de tablas

--- a/style.css
+++ b/style.css
@@ -428,7 +428,25 @@ audio{
     color: #053a8a;
     padding: 5px;
 }
+
+.tabla-dos{
+    padding: 10px 5% 10%;
+    width: 90%;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.dos{
+    border: 3px solid #941b1b;
+    padding: 8px;
+}
+
+
+
+
+
   
- 
+
+
 
   
