--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,11 +15,12 @@ header{
     background-color: azure;
     margin: 0px;
 }
-
+/* Añadir sombra al titulo */
+/* anadir nueva tipografia */
 h1 {
     color:rgb(16, 8, 110);
     text-align: center;
-    font-family:fantasy;
+    font-family: fantasy;
     padding-top: 30px;
 }
 
@@ -49,7 +50,7 @@ nav > a:hover {
 }
 
 .fotos-perros {
-    width: 32%;
+    width: 33%;
     height: 570px;
     margin: 0px;
     padding: 0px;
@@ -65,6 +66,7 @@ nav > a:hover {
 
 
 figure{
+    text-align: center;
     max-width: 100%;
     color: cornsilk;
     font-weight: bold;
@@ -135,7 +137,7 @@ p{
 }
 
 .lista-huella{
-    list-style-image: url(img/huella.png);
+    list-style-image: url(../img/huella.png);
     padding: 0px 5%;
     margin-left: 20px;
 }
@@ -450,11 +452,6 @@ audio{
     padding-left: 30px;
 }
 
-.lista-mvz-huella{
-    color: rgb(28, 28, 92);
-    list-style-image: url(img/huella.png); 
-}
-
 .lista-dos{
     color: rgb(28, 28, 92);
     text-align: justify;
@@ -463,7 +460,12 @@ audio{
     font-weight:lighter;
     padding: 0px 5%;
     font-size: 20px; 
-    margin-left: 30px;
+    margin-left: 20px;
+}
+
+.lista-mvz-huella{
+    color: rgb(28, 35, 92);
+    list-style-image: url(../img/huella.png); 
 }
 
 
@@ -491,35 +493,11 @@ video{
 }
 
 .dos{
-    border: 3px solid #941b1b;
+    border: 3px solid #5a14c3;
     padding: 8px;
 }
 
-.titulo-lista-mvz{
-    font-size: 25px;
-    padding: 15px;
-    text-align: justify;
-    color: rgb(202, 176, 8);
-    margin-left: 30px;
-    margin-top: 0px;
 
-}
-
-.lista-mvz-huella{
-    color: rgb(28, 28, 92);
-    list-style-image: url(img/huella.png); 
-}
-
-.lista-dos{
-    color: rgb(28, 28, 92);
-    text-align: justify;
-    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-    line-height: 1.5;
-    font-weight:lighter;
-    padding: 0px 5%;
-    font-size: 20px; 
-    margin-left: 20px;
-}
 
 
 
